@@ -41,6 +41,7 @@ extern char PROC_FILE[PATH_MAX];
 extern unsigned int delay;
 extern char show_kb;
 extern char show_all_if;
+extern char show_bits;
 extern char show_packets;
 extern char sumhidden;
 extern int output_method;
