@@ -24,6 +24,7 @@
 
 #include "options.h"
 
+#ifdef CONFIG_FILE
  /******************************************************************************
  * This is a replacement for strsep which is not portable (missing on Solaris).
  */
@@ -49,9 +50,8 @@ static char* getToken(char** str, const char* delims)
     *str=NULL;
     return token;
 }
-
 /******************************************************************************/
-
+#endif
 
 inline void print_help_line(char *short_c,char * long_c,char *descr) {
 #ifdef LONG_OPTIONS
@@ -77,6 +77,7 @@ inline void printhelp() {
     print_help_line("-t <msec>","-t, --timeout <msec>","displays stats every <msec> (1msec = 1/1000sec)");
     print_help_line("","","default: 500");
     print_help_line("-d","-d, --dynamic","show values dynamicly (Byte KB or MB)");
+    print_help_line("-b","-b, --bits","show bits per second");
     print_help_line("-a [mode]","-a, --allif [mode]","where mode is one of:");
     print_help_line("","","0=show only up (and selected) interfaces");
     print_help_line("","","1=show all up interfaces (default)");
@@ -213,6 +214,8 @@ char *token, *value;
         if (value) input_method=str2in_method(value);
     } else if( strcasecmp( token, "DYNAMIC" ) == 0 ) {
         if (value) show_kb=value[0]=='0' ? 1 : 0;
+    } else if( strcasecmp( token, "BITS" ) == 0 ) {
+        if (value) show_bits=value[0]=='0' ? 1 : 0;
     } else if( strcasecmp( token, "ALLIF" ) == 0 ) {
         if (value) show_all_if=value[0];
     } else if( strcasecmp( token, "PACKETS" ) == 0 ) {
@@ -273,6 +276,7 @@ void get_cmdln_options(int argc, char *argv[]) {
 #endif
         {"input",1,0,'i'},
         {"dynamic",0,0,'d'},
+	{"bits",0,0,'b'},
         {"help", 0, 0, 'h'},
         {"version",0,0,'V'},
         {"allif",1,0,'a'},
@@ -404,6 +408,9 @@ void get_cmdln_options(int argc, char *argv[]) {
                 break;
             case 'd':
                 show_kb=0;
+                break;
+            case 'b':
+                show_bits=1;
                 break;
 #if NETSTAT && ALLOW_NETSTATPATH
             case 'n':
