@@ -19,6 +19,7 @@
                   pre2:
                   - added outfile and daemonize for html output
                   - fixes for IRIX
+                  - added bit/second output (Michael Eckhoff)
   12-20-2004 0.4: pre1:
                   - get_iface_stats cleanup
                   - plain and csv output added
